syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

// Naming Server interface of the DistLedger Service

message RegisterRequest {
    string serviceName = 1;
    string qualifier = 2;
    string serverAddress = 3;
}
  
message RegisterResponse {}
  
message DeleteRequest {
    string serviceName = 1;
    string qualifier = 2;
    string serverAddress = 3;
}
  
message DeleteResponse {}
  
message LookupRequest {
    string serviceName = 1;
    string qualifier = 2;
}
  
message LookupResponse {
    repeated string servers = 1;
}

service NamingServerService {
    rpc register(RegisterRequest) returns (RegisterResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc lookup(LookupRequest) returns (LookupResponse);
}